src/pymicroscope/acquisition/epiphan/frmgrab.h


typedef struct _FrmGrabber FrmGrabber;
struct sockaddr_in;
void FrmGrab_Init(void);
void FrmGrab_Deinit(void);
void FrmGrabNet_Init(void);
void FrmGrabNet_Deinit(void);
FrmGrabber* FrmGrabLocal_Open(void);
FrmGrabber* FrmGrabLocal_OpenSN(const char* sn);
int FrmGrabLocal_Count(void);
int FrmGrabLocal_OpenAll(FrmGrabber* grabbers[], int maxcount);
typedef V2U_BOOL (*FrmGrabAuthProc)(char* user, char* pass, void* param);
typedef enum _FrmGrabConnectStatus {
    FrmGrabConnectOK,           
    FrmGrabConnectAuthOK,       
    FrmGrabConnectError,        
    FrmGrabConnectAuthFail,     
    FrmGrabConnectAuthCancel    
} FrmGrabConnectStatus;
FrmGrabber* FrmGrabNet_Open(void);
FrmGrabber* FrmGrabNet_OpenSN(const char* sn);
FrmGrabber* FrmGrabNet_OpenLocation(const char* location);
FrmGrabber* FrmGrabNet_OpenAddress(V2U_UINT32 ipaddr, V2U_UINT16 port);
FrmGrabber* FrmGrabNet_OpenAddress2(V2U_UINT32 ipaddr, V2U_UINT16 port,
    FrmGrabAuthProc authproc, void* param, FrmGrabConnectStatus* status);
V2U_BOOL FrmGrabNet_IsProtected(FrmGrabber* fg);
FrmGrabConnectStatus FrmGrabNet_Auth(FrmGrabber* fg, FrmGrabAuthProc authproc,
    void* param);
FrmGrabConnectStatus FrmGrabNet_Auth2(FrmGrabber* fg, const char* user,
    const char* pass);
typedef struct _FrmGrabNetStat {
    V2U_UINT64 bytesSent;       
    V2U_UINT64 bytesReceived;   
} FrmGrabNetStat;
V2U_BOOL FrmGrabNet_GetStat(FrmGrabber* fg, FrmGrabNetStat* netstat);
V2U_BOOL FrmGrabNet_GetRemoteAddr(FrmGrabber* fg, struct sockaddr_in* addr);
V2U_BOOL FrmGrabNet_IsAlive(FrmGrabber* fg);
V2U_BOOL FrmGrabNet_SetAutoReconnect(FrmGrabber* fg, V2U_BOOL enable);
FrmGrabber* FrmGrab_Open(const char* location);
FrmGrabber* FrmGrab_Dup(FrmGrabber* fg);
const char* FrmGrab_GetSN(FrmGrabber* fg);
int FrmGrab_GetProductId(FrmGrabber* fg);
const char* FrmGrab_GetProductName(FrmGrabber* fg);
const char* FrmGrab_GetLocation(FrmGrabber* fg);
V2U_UINT32 FrmGrab_GetCaps(FrmGrabber* fg);
void FrmGrab_GetVideoMode(FrmGrabber* fg, V2U_VideoMode* vm);
V2U_BOOL FrmGrab_DetectVideoMode(FrmGrabber* fg, V2U_VideoMode* vm);
V2U_BOOL FrmGrab_GetGrabParams(FrmGrabber* fg, V2U_GrabParameters* gp);
void FrmGrab_Close(FrmGrabber* fg);
typedef void* (*FrmGrabMemAlloc)(void* param, V2U_UINT32 len);
typedef void (*FrmGrabMemFree)(void* param, void* ptr);
typedef struct _FrmGrabMemCB {
    FrmGrabMemAlloc alloc;
    FrmGrabMemFree free;
} FrmGrabMemCB;