src/pymicroscope/acquisition/epiphan/v2u_defs.h


typedef unsigned __int8 V2U_UINT8;
typedef __int16 V2U_INT16;
typedef unsigned __int16 V2U_UINT16;
typedef __int32 V2U_INT32;
typedef unsigned __int32 V2U_UINT32;
typedef unsigned char V2U_UINT8;
typedef short V2U_INT16;
typedef unsigned short V2U_UINT16;
typedef long V2U_INT32;
typedef unsigned long V2U_UINT32;
typedef uint8_t V2U_UINT8;
typedef int16_t V2U_INT16;
typedef uint16_t V2U_UINT16;
typedef int32_t V2U_INT32;
typedef uint32_t V2U_UINT32;
typedef V2U_UINT16 V2U_UCS2;
typedef V2U_INT32  V2U_BOOL;
#define V2U_TRUE  1
#define V2U_FALSE 0
typedef struct v2u_size {
    V2U_INT32 width;
    V2U_INT32 height;
} V2U_PACKED V2USize;
typedef struct v2u_rect {
    V2U_INT32 x;
    V2U_INT32 y;
    V2U_INT32 width;
    V2U_INT32 height;
} V2U_PACKED V2URect;
typedef struct v2u_str_ucs2 {
    V2U_UCS2* buffer;       
    V2U_UINT32 len;         
    V2U_UINT32 maxlen;      
} V2U_PACKED V2UStrUcs2;
typedef struct ioctl_videomode {
    V2U_INT32  width;       
    V2U_INT32  height;      
    V2U_INT32  vfreq;       
} V2U_PACKED V2U_VideoMode;
typedef struct ioctl_setparams {
    V2U_UINT32 flags;       
    V2U_INT32  hshift;      
    V2U_UINT8  phase;       
    V2U_UINT8  gain_r;      
    V2U_UINT8  gain_g;      
    V2U_UINT8  gain_b;      
    V2U_UINT8  offset_r;    
    V2U_UINT8  offset_g;    
    V2U_UINT8  offset_b;    
    V2U_UINT8  reserved;    
    V2U_INT32  vshift;      
    V2U_INT32  pllshift;    
    V2U_UINT32 grab_flags;  
    V2U_UINT32 grab_flags_mask; 
} V2U_PACKED V2U_GrabParameters;
#define V2U_FLAG_VALID_HSHIFT       0x0001
#define V2U_FLAG_VALID_PHASE        0x0002
#define V2U_FLAG_VALID_OFFSETGAIN   0x0004
#define V2U_FLAG_VALID_VSHIFT       0x0008
#define V2U_FLAG_VALID_PLLSHIFT     0x0010
#define V2U_FLAG_VALID_GRABFLAGS    0x0020
#define V2U_GRAB_BMP_BOTTOM_UP      0x10000
#define V2U_GRAB_PREFER_WIDE_MODE   0x20000
#define V2U_MIN_PHASE     0
#define V2U_MAX_PHASE     31
#define V2U_MIN_GAIN      0
#define V2U_MAX_GAIN      255
#define V2U_MIN_OFFSET    0
#define V2U_MAX_OFFSET    63
typedef struct ioctl_sendps2 {
    short addr;
    short len;
    unsigned char buf[64];
} V2U_PACKED V2U_SendPS2;
#define V2U_PS2ADDR_KEYBOARD        0x01
#define V2U_PS2ADDR_MOUSE           0x02
#define V2U_SN_BUFSIZ 32
typedef struct ioctl_getsn {
    char sn[V2U_SN_BUFSIZ]; 
} V2U_PACKED V2U_GetSN;
typedef struct v2u_adjustment_range {
    V2U_UINT32 flags;
    V2U_UINT32 valid_flags;
    V2U_INT16 hshift_min;
    V2U_INT16 hshift_max;
    V2U_INT16 phase_min;
    V2U_INT16 phase_max;
    V2U_INT16 offset_min;
    V2U_INT16 offset_max;
    V2U_INT16 gain_min;
    V2U_INT16 gain_max;
    V2U_INT16 vshift_min;
    V2U_INT16 vshift_max;
    V2U_INT16 pll_min;
    V2U_INT16 pll_max;
} V2U_PACKED V2UAdjRange;
typedef struct vesa_videomode {
    V2U_UINT32 VerFrequency;        
    V2U_UINT16 HorAddrTime;         
    V2U_UINT16 HorFrontPorch;       
    V2U_UINT16 HorSyncTime;         
    V2U_UINT16 HorBackPorch;        
    V2U_UINT16 VerAddrTime;         
    V2U_UINT16 VerFrontPorch;       
    V2U_UINT16 VerSyncTime;         
    V2U_UINT16 VerBackPorch;        
    V2U_UINT32 Type;                
#define VIDEOMODE_TYPE_VALID            0x01
#define VIDEOMODE_TYPE_ENABLED          0x02
#define VIDEOMODE_TYPE_SUPPORTED        0x04
#define VIDEOMODE_TYPE_DUALLINK         0x08
#define VIDEOMODE_TYPE_DIGITAL          0x10
#define VIDEOMODE_TYPE_INTERLACED       0x20
#define VIDEOMODE_TYPE_HSYNCPOSITIVE    0x40
#define VIDEOMODE_TYPE_VSYNCPOSITIVE    0x80
} V2U_PACKED V2UVideoModeDescr;
#define V2U_CUSTOM_VIDEOMODE_COUNT      8
typedef struct custom_videomode {
    V2U_INT32 idx;
    V2UVideoModeDescr vesa_mode;
} V2U_PACKED V2UVGAMode;
typedef struct v2u_version {
    V2U_INT32 major;
    V2U_INT32 minor;
    V2U_INT32 micro;
    V2U_INT32 nano;
} V2U_PACKED V2UVersion;
typedef enum v2u_property_key {
#define V2U_PROPERTY_KEY_ENUM(key,name,type,access) key,
    V2U_PROPERTY_LIST(V2U_PROPERTY_KEY_ENUM)
#undef V2U_PROPERTY_KEY_ENUM
    V2UKey_Count        
} V2UPropertyKey;
#define V2U_USERDATA_LEN    8
typedef struct v2u_ioctl_property {
    V2UPropertyKey key;             
    V2UPropertyValue value;         
} V2U_PACKED V2U_Property;
typedef struct ioctl_grabframe {
#define V2U_GrabFrame_Fields(pointer) \
    pointer     pixbuf;     \
    V2U_UINT32  pixbuflen;  \
    V2U_INT32   width;      \
    V2U_INT32   height;     \
    V2U_UINT32  bpp;        
    V2U_GrabFrame_Fields(void*)
} V2U_PACKED V2U_GrabFrame;
typedef struct ioctl_grabframe2 {
#define V2U_GrabFrame2_Fields(pointer) \
    pointer     pixbuf;     \
    V2U_UINT32  pixbuflen;  \
    V2U_UINT32  palette;    \
    V2URect     crop;       \
    V2U_VideoMode mode;     \
    V2U_UINT32  imagelen;   \
    V2U_INT32   retcode;    
    V2U_GrabFrame2_Fields(void*)
} V2U_PACKED V2U_GrabFrame2;
#define V2U_GRABFRAME_RESERVED          0x0f000000 
#define V2U_GRABFRAME_FLAGS_MASK        0xf0000000 
#define V2U_GRABFRAME_BOTTOM_UP_FLAG    0x80000000 
#define V2U_GRABFRAME_KEYFRAME_FLAG     0x40000000 
#define V2U_GRABFRAME_ADDR_IS_PHYS      0x20000000 
#define V2U_GRABFRAME_ROTATION_MASK     0x00300000 
#define V2U_GRABFRAME_ROTATION_NONE     0x00000000 
#define V2U_GRABFRAME_ROTATION_LEFT90   0x00100000 
#define V2U_GRABFRAME_ROTATION_RIGHT90  0x00200000 
#define V2U_GRABFRAME_ROTATION_180      0x00300000 
#define V2U_GRABFRAME_SCALE_MASK          0x000F0000 
#define V2U_GRABFRAME_SCALE_NEAREST       0x00010000 
#define V2U_GRABFRAME_SCALE_AVERAGE       0x00020000 
#define V2U_GRABFRAME_SCALE_FAST_BILINEAR 0x00030000 
#define V2U_GRABFRAME_SCALE_BILINEAR      0x00040000 
#define V2U_GRABFRAME_SCALE_BICUBIC       0x00050000 
#define V2U_GRABFRAME_SCALE_EXPERIMENTAL  0x00060000 
#define V2U_GRABFRAME_SCALE_POINT         0x00070000 
#define V2U_GRABFRAME_SCALE_AREA          0x00080000 
#define V2U_GRABFRAME_SCALE_BICUBLIN      0x00090000 
#define V2U_GRABFRAME_SCALE_SINC          0x000A0000 
#define V2U_GRABFRAME_SCALE_LANCZOS       0x000B0000 
#define V2U_GRABFRAME_SCALE_SPLINE        0x000C0000 
#define V2U_GRABFRAME_SCALE_HW            0x000D0000 
#define V2U_GRABFRAME_SCALE_MAX_MODE      0x000D0000 
#define V2U_GRABFRAME_FORMAT_MASK       0x0000ffff 
#define V2U_GRABFRAME_FORMAT_RGB_MASK   0x0000001f 
#define V2U_GRABFRAME_FORMAT_RGB4       0x00000004
#define V2U_GRABFRAME_FORMAT_RGB8       0x00000008 
#define V2U_GRABFRAME_FORMAT_RGB16      0x00000010
#define V2U_GRABFRAME_FORMAT_RGB24      0x00000018
#define V2U_GRABFRAME_FORMAT_YUY2       0x00000100 
#define V2U_GRABFRAME_FORMAT_YV12       0x00000200
#define V2U_GRABFRAME_FORMAT_2VUY       0x00000300
#define V2U_GRABFRAME_FORMAT_BGR16      0x00000400
#define V2U_GRABFRAME_FORMAT_Y8         0x00000500
#define V2U_GRABFRAME_FORMAT_CRGB24     0x00000600 
#define V2U_GRABFRAME_FORMAT_CYUY2      0x00000700 
#define V2U_GRABFRAME_FORMAT_BGR24      0x00000800
#define V2U_GRABFRAME_FORMAT_CBGR24     0x00000900 
#define V2U_GRABFRAME_FORMAT_I420       0x00000A00 
#define V2U_GRABFRAME_FORMAT_ARGB32     0x00000B00
#define V2U_GRABFRAME_FORMAT_NV12       0x00000C00
#define V2U_GRABFRAME_FORMAT_C2VUY      0x00000D00 